antlr-generated/antlrGen/command/setloopvarinsertsParser.java
// $ANTLR 3.2 Sep 23, 2009 12:02:23 C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopvarinserts.g 2017-03-28 11:47:25

  package antlrGen.command;
  
  import art.utils.Utils;
  import art.utils.SetLoopInfo;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;

public class setloopvarinsertsParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "NEGATION", "COMMANDCHAR", "IDENT", "STRING", "EPRESSIONCHAR", "REFERENCECHAR", "INTEGER", "QUOTATIONMARK", "NOTNEWLINE", "WS", "NL", "DIGIT", "SPECCHAR", "LETTER", "DOT", "ANYCHAR", "'var'", "'='", "'&&'", "'||'", "'('", "')'", "'=='", "'!='", "'<'", "'<='", "'>='", "'>'", "'+'", "'-'", "'*'", "'/'", "'\\\\\"'", "'\\\\#'", "'\\\\?'"
    };
    public static final int INTEGER=10;
    public static final int REFERENCECHAR=9;
    public static final int EPRESSIONCHAR=8;
    public static final int COMMANDCHAR=5;
    public static final int T__29=29;
    public static final int T__28=28;
    public static final int T__27=27;
    public static final int T__26=26;
    public static final int T__25=25;
    public static final int T__24=24;
    public static final int LETTER=17;
    public static final int T__23=23;
    public static final int T__22=22;
    public static final int T__21=21;
    public static final int T__20=20;
    public static final int SPECCHAR=16;
    public static final int EOF=-1;
    public static final int T__30=30;
    public static final int T__31=31;
    public static final int T__32=32;
    public static final int WS=13;
    public static final int T__33=33;
    public static final int T__34=34;
    public static final int NEGATION=4;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int T__38=38;
    public static final int QUOTATIONMARK=11;
    public static final int ANYCHAR=19;
    public static final int NOTNEWLINE=12;
    public static final int IDENT=6;
    public static final int DIGIT=15;
    public static final int NL=14;
    public static final int DOT=18;
    public static final int STRING=7;

    // delegates
    // delegators


        public setloopvarinsertsParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public setloopvarinsertsParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return setloopvarinsertsParser.tokenNames; }
    public String getGrammarFileName() { return "C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopvarinserts.g"; }


    public static class evaluator_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "evaluator"
    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopvarinserts.g:25:1: evaluator : ( ( ws | nl )* COMMANDCHAR v= varDesc )* EOF ;
    public final setloopvarinsertsParser.evaluator_return evaluator() throws RecognitionException {
        setloopvarinsertsParser.evaluator_return retval = new setloopvarinsertsParser.evaluator_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token COMMANDCHAR3=null;
        Token EOF4=null;
        setloopvarinsertsParser.varDesc_return v = null;

        setloopvarinsertsParser.ws_return ws1 = null;

        setloopvarinsertsParser.nl_return nl2 = null;


        CommonTree COMMANDCHAR3_tree=null;
        CommonTree EOF4_tree=null;

        StringBuilder sb = new StringBuilder();
        try {
            // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopvarinserts.g:27:3: ( ( ( ws | nl )* COMMANDCHAR v= varDesc )* EOF )
            // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopvarinserts.g:28:3: ( ( ws | nl )* COMMANDCHAR v= varDesc )* EOF
            {
            root_0 = (CommonTree)adaptor.nil();

            // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopvarinserts.g:28:3: ( ( ws | nl )* COMMANDCHAR v= varDesc )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==COMMANDCHAR||(LA2_0>=WS && LA2_0<=NL)) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopvarinserts.g:28:5: ( ws | nl )* COMMANDCHAR v= varDesc
            	    {
            	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopvarinserts.g:28:5: ( ws | nl )*
            	    loop1:
            	    do {
            	        int alt1=3;
            	        int LA1_0 = input.LA(1);

            	        if ( (LA1_0==WS) ) {
            	            alt1=1;
            	        }
            	        else if ( (LA1_0==NL) ) {
            	            alt1=2;
            	        }


            	        switch (alt1) {
            	    	case 1 :
            	    	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopvarinserts.g:28:6: ws
            	    	    {
            	    	    pushFollow(FOLLOW_ws_in_evaluator89);
            	    	    ws1=ws();

            	    	    state._fsp--;
            	    	    if (state.failed) return retval;
            	    	    if ( state.backtracking==0 ) adaptor.addChild(root_0, ws1.getTree());

            	    	    }
            	    	    break;
            	    	case 2 :
            	    	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopvarinserts.g:28:11: nl
            	    	    {
            	    	    pushFollow(FOLLOW_nl_in_evaluator93);
            	    	    nl2=nl();

            	    	    state._fsp--;
            	    	    if (state.failed) return retval;
            	    	    if ( state.backtracking==0 ) adaptor.addChild(root_0, nl2.getTree());

            	    	    }
            	    	    break;

            	    	default :
            	    	    break loop1;
            	        }
            	    } while (true);

            	    COMMANDCHAR3=(Token)match(input,COMMANDCHAR,FOLLOW_COMMANDCHAR_in_evaluator97); if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	    COMMANDCHAR3_tree = (CommonTree)adaptor.create(COMMANDCHAR3);
            	    adaptor.addChild(root_0, COMMANDCHAR3_tree);
            	    }
            	    pushFollow(FOLLOW_varDesc_in_evaluator101);
            	    v=varDesc();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, v.getTree());
            	    if ( state.backtracking==0 ) {
            	      sb.append((v!=null?input.toString(v.start,v.stop):null));
            	    }

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);

            EOF4=(Token)match(input,EOF,FOLLOW_EOF_in_evaluator108); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            EOF4_tree = (CommonTree)adaptor.create(EOF4);
            adaptor.addChild(root_0, EOF4_tree);
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "evaluator"

    public static class varDesc_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "varDesc"
    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopvarinserts.g:31:1: varDesc : 'var' ( ws )* i= IDENT ( ws )* ( '=' ( ws )* e= expression ( ws )* )? ( ws | nl )* ;
    public final setloopvarinsertsParser.varDesc_return varDesc() throws RecognitionException {
        setloopvarinsertsParser.varDesc_return retval = new setloopvarinsertsParser.varDesc_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token i=null;
        Token string_literal5=null;
        Token char_literal8=null;
        setloopvarinsertsParser.expression_return e = null;

        setloopvarinsertsParser.ws_return ws6 = null;

        setloopvarinsertsParser.ws_return ws7 = null;

        setloopvarinsertsParser.ws_return ws9 = null;

        setloopvarinsertsParser.ws_return ws10 = null;

        setloopvarinsertsParser.ws_return ws11 = null;

        setloopvarinsertsParser.nl_return nl12 = null;


        CommonTree i_tree=null;
        CommonTree string_literal5_tree=null;
        CommonTree char_literal8_tree=null;

        try {
            // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopvarinserts.g:32:3: ( 'var' ( ws )* i= IDENT ( ws )* ( '=' ( ws )* e= expression ( ws )* )? ( ws | nl )* )
            // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopvarinserts.g:32:5: 'var' ( ws )* i= IDENT ( ws )* ( '=' ( ws )* e= expression ( ws )* )? ( ws | nl )*
            {
            root_0 = (CommonTree)adaptor.nil();

            string_literal5=(Token)match(input,20,FOLLOW_20_in_varDesc121); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            string_literal5_tree = (CommonTree)adaptor.create(string_literal5);
            adaptor.addChild(root_0, string_literal5_tree);
            }
            // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopvarinserts.g:32:11: ( ws )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==WS) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopvarinserts.g:0:0: ws
            	    {
            	    pushFollow(FOLLOW_ws_in_varDesc123);
            	    ws6=ws();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, ws6.getTree());

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);

            i=(Token)match(input,IDENT,FOLLOW_IDENT_in_varDesc128); if (state.failed) return retval;
            if ( state.backtracking==0 ) {
            i_tree = (CommonTree)adaptor.create(i);
            adaptor.addChild(root_0, i_tree);
            }
            // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopvarinserts.g:32:24: ( ws )*
            loop4:
            do {
                int alt4=2;
                int LA4_0 = input.LA(1);

                if ( (LA4_0==WS) ) {
                    int LA4_2 = input.LA(2);

                    if ( (synpred5_setloopvarinserts()) ) {
                        alt4=1;
                    }


                }


                switch (alt4) {
            	case 1 :
            	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopvarinserts.g:0:0: ws
            	    {
            	    pushFollow(FOLLOW_ws_in_varDesc131);
            	    ws7=ws();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, ws7.getTree());

            	    }
            	    break;

            	default :
            	    break loop4;
                }
            } while (true);

            // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopvarinserts.g:32:28: ( '=' ( ws )* e= expression ( ws )* )?
            int alt7=2;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==21) ) {
                alt7=1;
            }
            switch (alt7) {
                case 1 :
                    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopvarinserts.g:32:29: '=' ( ws )* e= expression ( ws )*
                    {
                    char_literal8=(Token)match(input,21,FOLLOW_21_in_varDesc135); if (state.failed) return retval;
                    if ( state.backtracking==0 ) {
                    char_literal8_tree = (CommonTree)adaptor.create(char_literal8);
                    adaptor.addChild(root_0, char_literal8_tree);
                    }
                    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopvarinserts.g:32:33: ( ws )*
                    loop5:
                    do {
                        int alt5=2;
                        int LA5_0 = input.LA(1);

                        if ( (LA5_0==WS) ) {
                            int LA5_2 = input.LA(2);

                            if ( (synpred6_setloopvarinserts()) ) {
                                alt5=1;
                            }


                        }


                        switch (alt5) {
                    	case 1 :
                    	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopvarinserts.g:0:0: ws
                    	    {
                    	    pushFollow(FOLLOW_ws_in_varDesc137);
                    	    ws9=ws();

                    	    state._fsp--;
                    	    if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) adaptor.addChild(root_0, ws9.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop5;
                        }
                    } while (true);

                    pushFollow(FOLLOW_expression_in_varDesc142);
                    e=expression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, e.getTree());
                    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopvarinserts.g:32:50: ( ws )*
                    loop6:
                    do {
                        int alt6=2;
                        int LA6_0 = input.LA(1);

                        if ( (LA6_0==WS) ) {
                            int LA6_1 = input.LA(2);

                            if ( (synpred7_setloopvarinserts()) ) {
                                alt6=1;
                            }


                        }


                        switch (alt6) {
                    	case 1 :
                    	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopvarinserts.g:0:0: ws
                    	    {
                    	    pushFollow(FOLLOW_ws_in_varDesc144);
                    	    ws10=ws();

                    	    state._fsp--;
                    	    if (state.failed) return retval;
                    	    if ( state.backtracking==0 ) adaptor.addChild(root_0, ws10.getTree());

                    	    }
                    	    break;

                    	default :
                    	    break loop6;
                        }
                    } while (true);


                    }
                    break;

            }

            // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopvarinserts.g:32:56: ( ws | nl )*
            loop8:
            do {
                int alt8=3;
                int LA8_0 = input.LA(1);

                if ( (LA8_0==WS) ) {
                    int LA8_2 = input.LA(2);

                    if ( (synpred9_setloopvarinserts()) ) {
                        alt8=1;
                    }


                }
                else if ( (LA8_0==NL) ) {
                    int LA8_3 = input.LA(2);

                    if ( (synpred10_setloopvarinserts()) ) {
                        alt8=2;
                    }


                }


                switch (alt8) {
            	case 1 :
            	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopvarinserts.g:32:57: ws
            	    {
            	    pushFollow(FOLLOW_ws_in_varDesc150);
            	    ws11=ws();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, ws11.getTree());

            	    }
            	    break;
            	case 2 :
            	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopvarinserts.g:32:62: nl
            	    {
            	    pushFollow(FOLLOW_nl_in_varDesc154);
            	    nl12=nl();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, nl12.getTree());

            	    }
            	    break;

            	default :
            	    break loop8;
                }
            } while (true);

            if ( state.backtracking==0 ) {

                       //add the new variable to the setloop
                       if (Utils.canWrite()){
                           SetLoopInfo.addVariableToSetLoop((i!=null?i.getText():null), (e!=null?input.toString(e.start,e.stop):null));
                       }
                  
            }

            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "varDesc"

    public static class expression_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "expression"
    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopvarinserts.g:44:1: expression : ( freeExpression | stringExpression );
    public final setloopvarinsertsParser.expression_return expression() throws RecognitionException {
        setloopvarinsertsParser.expression_return retval = new setloopvarinsertsParser.expression_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        setloopvarinsertsParser.freeExpression_return freeExpression13 = null;

        setloopvarinsertsParser.stringExpression_return stringExpression14 = null;



        try {
            // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopvarinserts.g:45:3: ( freeExpression | stringExpression )
            int alt9=2;
            int LA9_0 = input.LA(1);

            if ( (LA9_0==IDENT||LA9_0==INTEGER||LA9_0==WS||LA9_0==24||(LA9_0>=32 && LA9_0<=33)) ) {
                alt9=1;
            }
            else if ( ((LA9_0>=STRING && LA9_0<=EPRESSIONCHAR)) ) {
                alt9=2;
            }
            else {
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 9, 0, input);

                throw nvae;
            }
            switch (alt9) {
                case 1 :
                    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopvarinserts.g:45:5: freeExpression
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_freeExpression_in_expression186);
                    freeExpression13=freeExpression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, freeExpression13.getTree());

                    }
                    break;
                case 2 :
                    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopvarinserts.g:46:5: stringExpression
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    pushFollow(FOLLOW_stringExpression_in_expression192);
                    stringExpression14=stringExpression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, stringExpression14.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "expression"

    public static class stringExpression_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "stringExpression"
    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopvarinserts.g:49:1: stringExpression : ( nameExpression | STRING )+ ;
    public final setloopvarinsertsParser.stringExpression_return stringExpression() throws RecognitionException {
        setloopvarinsertsParser.stringExpression_return retval = new setloopvarinsertsParser.stringExpression_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token STRING16=null;
        setloopvarinsertsParser.nameExpression_return nameExpression15 = null;


        CommonTree STRING16_tree=null;

        try {
            // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopvarinserts.g:50:3: ( ( nameExpression | STRING )+ )
            // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopvarinserts.g:50:5: ( nameExpression | STRING )+
            {
            root_0 = (CommonTree)adaptor.nil();

            // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopvarinserts.g:50:5: ( nameExpression | STRING )+
            int cnt10=0;
            loop10:
            do {
                int alt10=3;
                int LA10_0 = input.LA(1);

                if ( (LA10_0==EPRESSIONCHAR) ) {
                    alt10=1;
                }
                else if ( (LA10_0==STRING) ) {
                    alt10=2;
                }


                switch (alt10) {
            	case 1 :
            	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopvarinserts.g:50:6: nameExpression
            	    {
            	    pushFollow(FOLLOW_nameExpression_in_stringExpression208);
            	    nameExpression15=nameExpression();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) adaptor.addChild(root_0, nameExpression15.getTree());

            	    }
            	    break;
            	case 2 :
            	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopvarinserts.g:50:23: STRING
            	    {
            	    STRING16=(Token)match(input,STRING,FOLLOW_STRING_in_stringExpression212); if (state.failed) return retval;
            	    if ( state.backtracking==0 ) {
            	    STRING16_tree = (CommonTree)adaptor.create(STRING16);
            	    adaptor.addChild(root_0, STRING16_tree);
            	    }

            	    }
            	    break;

            	default :
            	    if ( cnt10 >= 1 ) break loop10;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(10, input);
                        throw eee;
                }
                cnt10++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            if ( state.backtracking==0 ) {

            retval.tree = (CommonTree)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (CommonTree)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "stringExpression"

    public static class nameExpression_return extends ParserRuleReturnScope {
        CommonTree tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "nameExpression"
    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopvarinserts.g:53:1: nameExpression : ( EPRESSIONCHAR ( ws )* simpleExpr ( ws )* EPRESSIONCHAR | EPRESSIONCHAR ( ws )* freeExpression ( ws )* ( EPRESSIONCHAR )+ );
    public final setloopvarinsertsParser.nameExpression_return nameExpression() throws RecognitionException {
        setloopvarinsertsParser.nameExpression_return retval = new setloopvarinsertsParser.nameExpression_return();
        retval.start = input.LT(1);

        CommonTree root_0 = null;

        Token EPRESSIONCHAR17=null;
        Token EPRESSIONCHAR21=null;
        Token EPRESSIONCHAR22=null;
        Token EPRESSIONCHAR26=null;
        setloopvarinsertsParser.ws_return ws18 = null;

        setloopvarinsertsParser.simpleExpr_return simpleExpr19 = null;

        setloopvarinsertsParser.ws_return ws20 = null;

        setloopvarinsertsParser.ws_return ws23 = null;

        setloopvarinsertsParser.freeExpression_return freeExpression24 = null;

        setloopvarinsertsParser.ws_return ws25 = null;


        CommonTree EPRESSIONCHAR17_tree=null;
        CommonTree EPRESSIONCHAR21_tree=null;
        CommonTree EPRESSIONCHAR22_tree=null;
        CommonTree EPRESSIONCHAR26_tree=null;

        try {
            // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopvarinserts.g:54:3: ( EPRESSIONCHAR ( ws )* simpleExpr ( ws )* EPRESSIONCHAR | EPRESSIONCHAR ( ws )* freeExpression ( ws )* ( EPRESSIONCHAR )+ )
            int alt16=2;
            alt16 = dfa16.predict(input);
            switch (alt16) {
                case 1 :
                    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopvarinserts.g:54:5: EPRESSIONCHAR ( ws )* simpleExpr ( ws )* EPRESSIONCHAR
                    {
                    root_0 = (CommonTree)adaptor.nil();

                    EPRESSIONCHAR17=(Token)match(input,EPRESSIONCHAR,FOLLOW_EPRESSIONCHAR_in_nameExpression229); if (state.failed) return retval;
                    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopvarinserts.g:54:22: ( ws )*
                    loop11:
                    do {
                        int alt11=2;
                        int LA11_0 = input.LA(1);

                        if ( (LA11_0==WS) ) {
                            alt11=1;
                        }


                        switch (alt11) {
                    	case 1 :
                    	    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopvarinserts.g:0:0: ws
                    	    {
                    	    pushFollow(FOLLOW_ws_in_nameExpression232);
                    	    ws18=ws();

                    	    state._fsp--;
                    	    if (state.failed) return retval;

                    	    }
                    	    break;

                    	default :
                    	    break loop11;
                        }
                    } while (true);

                    pushFollow(FOLLOW_simpleExpr_in_nameExpression236);
                    simpleExpr19=simpleExpr();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, simpleExpr19.getTree());
                    // C:\\work\\art\\latest-code\\vclang-code-dd0a89f0d579f02ec8c3d8cd398ea8f7cbb445aa\\src\\art\\grammar\\setloopvarinserts.g:54:38: ( ws )*
                    loop12:
                    do {
                        int alt12=2;
                        int LA12_0 = input.LA(1);

                        if ( (LA12_0==WS) ) {
                            alt12=1;
                        }

